<resources>
    <string name="app_name">HBus</string>
    <string name="action_remove">Remove</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_jump">Jump</string>
    <string name="action_next">Next</string>
    <string name="title_activity_list_line">Online hours</string>
    <string name="hello_world">Hello world!</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="code_of_bus">Code of bus</string>
    <string name="no_have_bus">No have bus this day</string>
    <string name="next_bus">Next bus</string>
    <string name="all_lines">All lines</string>
    <string name="itinerary_name">Itinerary Name</string>
    <string name="delete_itinerary_with_sucess">Delete itinerary %1$s with success!</string>
    <string name="title_activity_load">Splash screen</string>
    <string name="finish">Finish</string>
    <string name="not_found">Not found</string>
    <string name="title_activity_splash" translatable="false">SplashActivity</string>
    <string name="about">About</string>
    <string name="no_have_itinerary">No have favorite itinerary</string>
    <string name="not_found_city">Not found city</string>
    <string name="number_of_itineraries">%1$s itineraries</string>
    <string name="dialog_alert_title_confirm_remove">Remove favorite itinerary?</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_help" translatable="false">@string/action_help</string>
    <string name="action_help">Help and feedback</string>
    <string name="action_informations_of_version">Informations of version</string>
    <string name="company_market">2016 Expresso Bits</string>
    <string name="version">Version</string>
    <string name="send_feedback">Send feedback</string>
    <string name="action_send_feedback">Send feedback</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="see_on_play_store">See on Play Store</string>
    <string name="write_your_feedback_here">Write your feedback here</string>
    <string name="send_your_feedback_to_expressobits">Send your feedback to Expresso Bits and make best app now!</string>
    <string name="downloading_data">Downloading data for city of %1$s</string>
    <string name="include_system_information">Include system information</string>
    <string name="send_feedback_with_sucess">Send feedback with success!</string>
    <string name="wait_a_few_minutes">Wait a few minutes</string>
    <string name="action_refresh_cities_list">Refresh cities list</string>
    <string name="title_activity_times" translatable="false">TimesActivity</string>
    <string name="action_refresh">Refresh</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="city">City</string>
    <string name="click_here_to_change">Click here to change</string>
    <string name="add_itinerary">Add itinerary</string>
    <string name="see_all_itinerary">See all itinerary</string>
    <string name="select_the_type_of_feedback">Select the type of feedback</string>
    <string name="developer">Developer</string>
    <string-array name="list_feedbacks">
        <item>Tip</item>
        <item>Error</item>
        <item>Update</item>
    </string-array>
    <string name="title_activity_help_content">HelpContentActivity</string>
    <string name="alarms">Alarms</string>
    <string name="sundayFirstChar">S</string>
    <string name="mondayFirstChar">M</string>
    <string name="tuesdayFirstChar">T</string>
    <string name="wednesdayFirstChar">W</string>
    <string name="thursdayFirstChar">T</string>
    <string name="fridayFirstChar">F</string>
    <string name="saturdayFirstChar">S</string>
    <string name="alarm_enable">%1$s enable!</string>
    <string name="alarm_disable">%1$s disable!</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_added">Alarm added</string>
    <string name="alarm_removed">Alarm removed</string>
    <string name="edit_alarm">Edit alarm</string>
    <string name="new_alarm">New alarm</string>
    <string name="name">Name</string>
    <string name="alarm_name">Alarm name</string>
    <string name="action_save">Save</string>
    <string name="add_new_alarm_with_sucess">Add new alarm with success!</string>
    <string name="updated_alarm_with_sucess">Updated alarm with success!</string>
    <string name="notification_alarm_ticker">Don\'t miss the %1$s</string>
    <string name="notification">Notification</string>
    <string name="notification_alarm_title_text">%1$s left ace %2$s</string>
    <string name="notification_alarm_text">Way %1$s</string>
    <string name="notification_alarm_subtext">Company %1$s</string>
    <plurals name="delay_content">
        <item quantity="few">Bus after %1$s minutes</item>
        <item quantity="zero">Bus now!</item>
        <item quantity="other">Bus before %1$s minutes</item>
    </plurals>
    <string name="before_10_minutes">10 minutes before</string>
    <string name="before_5_minutes">5 minutes before</string>
    <string name="in_bus_time">In bus time</string>
    <string name="after_5_minutes">5 minutes after</string>
    <string name="after_10_minutes">10 minutes after</string>
    <string name="company_name" translatable="false">Expresso Bits</string>
    <string name="companies">Companies</string>
    <string name="news">News</string>
    <string name="company_use">of %1$s times</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="phoneNumber">Phone</string>
    <string name="address">Address</string>
    <string name="loading">Loading\u2026</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="updated_date">Update %1$s</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="or">Or</string>
    <string name="sign_in_anonymously"><a href="">Continue without login</a></string>
    <string name="exit">Exit</string>
    <string name="google_sign_sucess">Google Sign In was successful!</string>
    <string name="loading_sign_google">Loading data by Google…</string>
    <string name="anonymous">Anonymous</string>
    <string name="no_have_news">No have news</string>
    <string name="last_ago">Last ago %1$s</string>
    <string name="itineraries">Itineraries</string>
    <string name="just_now">just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="minute_ago">%1$s minutes ago</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hours_ago">%1$s hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">%1$s days ago</string>
    <string name="error_load_city">error on loading city.</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="added_bookmark_itinerary_with_sucess">Added bookmark itinerary with success</string>
    <string name="all_itineraries">All itineraries</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bus_code">Bus code</string>
    <string name="business_days">Business days</string>
    <string name="city_not_found">Not found city</string>
    <string name="feedback_was_sent_with_sucess">Feedback was sent with success!</string>
    <string name="no_bookmarked_itinerary">No bookmarked itineraries</string>
    <string name="title_activity_choose_city">Choose city</string>
    <string name="view_all_itineraries">View all itineraries</string>
    <string name="view_line_timetable">View line timetable</string>
    <string name="view_timetable">View timetable</string>
    <string name="recent_buses">Recent bus</string>
    <string name="pref_title_no_actived_itens">Search agency and city not actived</string>
    <string name="error_loading_description">Error on load description</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="login_agreeing_privacy_policy">By logging in to your account you are agreeing to our</string>
    <string name="login_privacy_policy"><a href="https://expressobits.com.br/privacy_policy.html">Privacy Policy</a></string>
    <string name="site_privacy_policy" translatable="false">https://hbus-1206.firebaseapp.com/privacy_policy.html</string>
    <string name="action_privacy_policy">Privacy policy</string>
    <string name="email_here">email here</string>
    <string name="news_image">news image</string>
    <string name="news_icon_image">news icon image</string>
    <string name="unread_news">Unread news</string>
    <string name="unread">Unread</string>
    <string name="itinerary_search_hint">Search itinerary</string>
    <string name="action_searchable_activity">Search itinerary</string>
    <string name="dialog_alert_title_confirm_clear_search_history">Are you sure you want to delete your search history?</string>
    <string name="search_history_deleted">Search history deleted</string>
    <string name="download_schedule_preparing">We\'re preparing everything for you…</string>
    <string name="notifications_about_a_bus">Notifications of route alarms</string>
    <string name="download_schedule_completed_successfully">Download completed successfully!</string>
    <string name="dialog_alert_message_confirm_update">Update to get the most current version of your city time</string>
    <string name="dialog_alert_title_confirm_update">Do you want to upgrade?</string>
    <string name="download_schedule_update_message">Updating database for you…</string>
    <string name="common_percent_download" translatable="false">%1$d%%</string>
    <string name="pref_title_database_manager">Database manager</string>
    <string name="dialog_alert_title_confirm_remove_database">Do you want to remove?</string>
    <string name="dialog_alert_message_confirm_remove_database">This implies downloading the database of this city when you need to see the times again</string>
    <string name="dialog_alert_message_no_delete_database_in_use">There is no way to delete a database that is in use!</string>
    <string name="list_database_database_deleted_successfully">Database deleted successfully!</string>
    <string name="list_database_dialog_title_is_not_possible_to_remove">Is not possible to remove!</string>
    <string name="get_started">Get started</string>
    <string name="search_for_your_favorite">Search for your favorite itinerary and check that it always appears on the main screen.</string>
    <string name="common_tips">Tips</string>
    <string name="alarm_list_there_is_no_alarm">There is no alarm</string>
    <string name="developer_name" translatable="false">Rafael Morais Correa</string>
    <string name="images_and_icons">Images and icons</string>
    <string name="images_and_icons_name">Design made by Freepik from www.flaticon.com</string>
    <string name="feedback_failed_to_send_feedback">Failed to send feedback</string>
    <string name="download_schedule_failed_download">Failed to download database</string>
    <string name="alarm_notification_body">Way %1$s</string>
    <string name="alarm_notification_reminder">Do not miss the %1$s</string>
    <string name="alarm_notification_title">%1$s part at %2$s</string>
    <string name="alarm_was_updated_with_sucess">Updated alarm successfully!</string>
</resources>