<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_action_information_version"
        android:title="@string/action_informations_of_version"
        app:showAsAction="never"
        android:orderInCategory="2"/>

    <item android:id="@+id/menu_action_send_feedback"
        android:title="@string/action_send_feedback"
        app:showAsAction="never"
        android:orderInCategory="3"/>

    <item android:id="@+id/menu_action_privacy_policy"
        android:title="@string/action_privacy_policy"
        app:showAsAction="never"
        android:orderInCategory="4"/>

    <item android:id="@+id/menu_action_see_on_play_store"
        android:title="@string/see_on_play_store"
        app:showAsAction="never"
        android:orderInCategory="1"/>
</menu>