<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/favorites"/>
        <item
            android:id="@+id/nav_all_itineraries"
            android:icon="@drawable/ic_menu_bus"
            android:title="@string/all_lines" />
    </group>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_Help"
                android:title="@string/action_help" />
        </menu>
    </item>

</menu>
