<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutItemListAlarm"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:padding="2dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/example_hours"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                android:padding="8dp"
                android:textSize="32dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">



            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/alarm" />

            <TextView
                android:id="@+id/textViewItineraryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/itinerary_name" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDaysSunday"
                    style="@style/DayOfWeek.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sundayFirstChar" />

                <TextView
                    android:id="@+id/textViewDaysMonday"
                    style="@style/DayOfWeek.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/mondayFirstChar" />

                <TextView
                    android:id="@+id/textViewDaysTuesday"
                    style="@style/DayOfWeek.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tuesdayFirstChar" />

                <TextView
                    android:id="@+id/textViewDaysWednesday"
                    style="@style/DayOfWeek.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/wednesdayFirstChar" />

                <TextView
                    android:id="@+id/textViewDaysThursday"
                    style="@style/DayOfWeek.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/thursdayFirstChar" />

                <TextView
                    android:id="@+id/textViewDaysFriday"
                    style="@style/DayOfWeek.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/fridayFirstChar" />

                <TextView
                    android:id="@+id/textViewDaysSaturday"
                    style="@style/DayOfWeek.TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/saturdayFirstChar" />


            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/toggleActived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="16dp" />

    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

</LinearLayout>