<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:id="@+id/linearLayoutItemList"
    android:layout_height="72dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <ImageView
        android:id="@+id/imageViewItineraryIconType"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/itinerary_name"
        android:background="@drawable/circle_icon_itinerary_default"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:padding="1dp"
            android:text="@string/loading"
            android:id="@+id/textViewItineraryName"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorPrimary"
            android:text="@string/loading"
            android:shadowColor="@color/black"
            android:id="@+id/textViewCompanyName"/>


    </LinearLayout>


    <ImageView
        android:id="@+id/icon"
        android:layout_gravity="center"
        android:contentDescription="@string/bookmarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_favorite"/>

</LinearLayout>